--- a/pmg-backend/package.json
+++ b/pmg-backend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "amqplib": "^0.10.9",
     "axios": "^1.12.1",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "winston": "^3.17.0"
   }
 }
