--- a/pmg-backend/package.json
+++ b/pmg-backend/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "amqplib": "^0.10.9",
     "axios": "^1.12.1",
+    "cors": "^2.8.5",
     "js-yaml": "^4.1.0",
+    "prom-client": "^15.1.3",
     "winston": "^3.17.0"
   }
 }
