--- a/pmg-backend/package.json
+++ b/pmg-backend/package.json
@@ -16,7 +16,9 @@
     "amqplib": "^0.10.9",
     "axios": "^1.12.1",
     "cors": "^2.8.5",
+    "express-validator": "^7.2.1",
     "js-yaml": "^4.1.0",
+    "multer": "^2.0.2",
     "prom-client": "^15.1.3",
     "winston": "^3.17.0"
   }
